<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlanchedAlmond"
    tools:context=".CalculateActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/calc_title"
        android:textColor="@color/Tomato"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.037">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_calc"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/topLineET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/calc_hind_text"
            android:inputType="number"/>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/Tomato"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.039">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_calc"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/secondLineET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/calc_hind_text"
            android:inputType="number"/>
    </LinearLayout>

    <View
        android:id="@+id/secondLineView"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/Tomato"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/buttonsLO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.049">
        <Button
            android:id="@+id/plusBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_btn"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/LightSalmon"/>
        <Button
            android:id="@+id/minusBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_btn"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/LightSalmon"/>
        <Button
            android:id="@+id/multBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mult_btn"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/LightSalmon"/>
        <Button
            android:id="@+id/divBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div_btn"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/LightSalmon"/>
    </LinearLayout>

    <TextView
        android:id="@+id/secondResultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/result_title_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/calcNavigationBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsLO" />

    <Button
        android:id="@+id/calcNavigationBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_navigation_btn"
        android:textSize="20sp"
        android:textColor="@color/LightSalmon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>